Fix icon alignment and contact information positioning

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -21,7 +21,14 @@ body {
 
 #sidenav-footer {
     position: fixed; 
-    bottom: 0px;
+    bottom: 15px;
+    left: 16px;
+}
+
+#sidenav-footer div {
+    display: flex;
+    align-items: center;
+    height: 45px;
 }
 
 #sidenav-footer p {
